# Penguin

./: .gitignore  README.md  copilot-dev-notes.txt  main.py  pyproject.toml  requirements.txt
api/: routes.py
config/: service_filter.txt  settings.py
core/: app_logic.py
data/: ascii_banner.txt  bot_data.json  data_loader.py
services/: port_service.py
tests/: test_port_service.py
utils/: checkers.py  error_handler.py  service_filter.py  system_stats.py  validators.py  web.py
